<resources>
    <string name="app_name">Dragoman</string>
    <string name="add_phrases">Add Phrases</string>
    <string name="DRAGOMAN">DRAGOMAN</string>
    <string name="display_phrases">Display Phrases</string>
    <string name="edit_phrases">Edit Phrases</string>
    <string name="quit">Quit</string>
    <string name="language_subscription">Language Subscription</string>
    <string name="translate">Translate</string>
    <string name="save">Save</string>
    <string name="enter_a_single_word_or_a_single_phrase">Enter a single word or a single phrase</string>
    <string name="dragoman">Dragoman</string>
    <string name="available_phrases">Available Phrases</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="available_foreign_languages">Available foreign languages</string>
    <string name="update">Update</string>
    <string name="translation">Translation</string>
    <string name="select_the_language">Select the language</string>
    <string name="speech">Speech</string>
    <string name="a_simple_translator">A Language Translator</string>
    <string name="todo">TODO</string>
    <string name="view_all">View All</string>
    <string name="translate_all">Translate All</string>
    <string name="pronounce">Pronounce</string>

</resources>
