<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#143D59"
    tools:context=".MenuActivity">

    <TextView
        android:id="@+id/textView_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/pacifico"
        android:gravity="center_horizontal"
        android:text="@string/dragoman"
        android:textColor="#F4D03F"
        android:textSize="50sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_add"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:background="@drawable/button"
        android:fontFamily="@font/archivo_black"
        android:onClick="launchAddPhrase"
        android:text="@string/add_phrases"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_header" />

    <Button
        android:id="@+id/button_view"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/button"
        android:fontFamily="@font/archivo_black"
        android:onClick="launchDisplayPhrase"
        android:text="@string/display_phrases"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_add" />

    <Button
        android:id="@+id/button_edit"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/button"
        android:fontFamily="@font/archivo_black"
        android:onClick="launchEditPhrase"
        android:text="@string/edit_phrases"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_view" />

    <Button
        android:id="@+id/button_language"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/button"
        android:fontFamily="@font/archivo_black"
        android:onClick="launchSubscription"
        android:text="@string/language_subscription"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_edit" />

    <Button
        android:id="@+id/button_translate"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/button"
        android:fontFamily="@font/archivo_black"
        android:onClick="launchTranslate"
        android:text="@string/translate"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_language" />


    <Button
        android:id="@+id/button_quit"
        android:layout_width="107dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="80dp"
        android:background="@drawable/button"
        android:fontFamily="@font/archivo_black"
        android:onClick="ExitTheApp"
        android:text="@string/quit"
        android:textAllCaps="true"
        android:textColor="#F44336"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_translateAll" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:fontFamily="serif-monospace"
        android:text="@string/a_simple_translator"
        android:textColor="#F4D03F"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.945"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_header" />

    <Button
        android:id="@+id/button_translateAll"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/button"
        android:fontFamily="@font/archivo_black"
        android:onClick="launchTranslateAll"
        android:text="@string/translate_all"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_translate" />

</androidx.constraintlayout.widget.ConstraintLayout>